[templates/nc] Simple layout for text slides

--- a/templates/narrowcasting/text.twig
+++ b/templates/narrowcasting/text.twig
@@ -1,1 +1,9 @@
-{{ slide.text }}
+<div class="slide">
+	<div class="spacer-vert"></div>
+	<div class="inner">
+		<div class="spacer-hor"></div>
+		<div class="content">{{ slide.text }}
+		</div>
+	</div>
+	<div class="spacer-vert"></div>
+</div>
