--- a/templates/narrowcasting/_entry.twig
+++ b/templates/narrowcasting/_entry.twig
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ entry.title }}</title>
+    {% block styles %}
+    <link rel="stylesheet" href="/css/nc/shared.css" />
+    {% endblock %}
+
+    {% block scripts %}
+    {% endblock %}
 </head>
 <body>
     {% for slide in entry.narrowcastingSlides %}
