--- a/templates/narrowcasting/_entry.twig
+++ b/templates/narrowcasting/_entry.twig
@@ -14,7 +14,7 @@
 </head>
 <body>
     {% for slide in entry.narrowcastingSlides %}
-        {% include("narrowcasting/" ~ slide.type ~ ".twig") %}
+        {% include("narrowcasting/slides/" ~ slide.type ~ ".twig") %}
     {% endfor %}
 </body>
 </html>
