[css/nc] Remove debug styles, split things up a little

--- a/templates/narrowcasting/_entry.twig
+++ b/templates/narrowcasting/_entry.twig
@@ -11,6 +11,8 @@
 
     {% block styles %}
     <link rel="stylesheet" href="/css/nc/shared.css" />
+    <link rel="stylesheet" href="/css/nc/text.css" />
+    <link rel="stylesheet" href="/css/nc/media.css" />
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     {% endblock %}
 
