--- a/templates/narrowcasting/slides/text.twig
+++ b/templates/narrowcasting/slides/text.twig
@@ -2,8 +2,7 @@
 	<div class="spacer-vert"></div>
 	<div class="inner">
 		<div class="spacer-hor"></div>
-		<div class="content">{{ slide.text }}
-		</div>
+		<div class="text-content">{{ slide.text }}</div>
 	</div>
 	<div class="spacer-vert"></div>
 </div>
