--- a/templates/narrowcasting/_entry.twig
+++ b/templates/narrowcasting/_entry.twig
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ entry.title }}</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      {{ entry.title }}
+    </title>
 
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
-    <link rel="modulepreload" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.esm.browser.min.js" />
+    <link rel="modulepreload"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.esm.browser.min.js" />
 
     {% block styles %}
-    <link rel="stylesheet" href="/css/nc/shared.css" />
-    <link rel="stylesheet" href="/css/nc/text.css" />
-    <link rel="stylesheet" href="/css/nc/media.css" />
-    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+      <link rel="stylesheet" href="/css/nc/shared.css" />
+      <link rel="stylesheet" href="/css/nc/text.css" />
+      <link rel="stylesheet" href="/css/nc/media.css" />
+      <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     {% endblock %}
 
     {% block scripts %}
+
     {% endblock %}
-</head>
-<body>
+  </head>
+  <body>
     <div class="swiper">
-        <div class="swiper-wrapper">
+      <div class="swiper-wrapper">
         {% for slide in entry.narrowcastingSlides %}
-            <div class="swiper-slide">
-                {% include("narrowcasting/slides/" ~ slide.type ~ ".twig") %}
-            </div>
+          <div class="swiper-slide">
+            {% include 'narrowcasting/slides/' ~ slide.type ~ '.twig' %}
+          </div>
         {% endfor %}
-        </div>
+      </div>
     </div>
 
     <script type="module" src="/js/nc/index.js"></script>
-</body>
+  </body>
 </html>
