--- a/templates/narrowcasting/slides/text.twig
+++ b/templates/narrowcasting/slides/text.twig
@@ -1,4 +1,4 @@
-<div class="slide">
+<div class="slide" style="background-color: {{ slide.backgroundColor }};">
 	<div class="spacer-vert"></div>
 	<div class="inner">
 		<div class="spacer-hor"></div>
