[config] Add text colouring

--- a/templates/narrowcasting/slides/text.twig
+++ b/templates/narrowcasting/slides/text.twig
@@ -1,8 +1,8 @@
-<div class="slide" style="background-color: {{ slide.backgroundColor }};">
+<div class="slide" style="background-color: {{ slide.backgroundColour }};">
 	<div class="spacer-vert"></div>
 	<div class="inner">
 		<div class="spacer-hor"></div>
-		<div class="text-content">{{ slide.text }}</div>
+		<div class="text-content" style="color: {{ slide.textColour }};">{{ slide.text }}</div>
 	</div>
 	<div class="spacer-vert"></div>
 </div>
