--- a/templates/narrowcasting/_entry.twig
+++ b/templates/narrowcasting/_entry.twig
@@ -8,7 +8,7 @@
       {{ entry.title }}
     </title>
 
-    <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+      <link rel="preconnect" href="https://cdn.jsdelivr.net" />
     <link rel="modulepreload"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.esm.browser.min.js" />
 
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="/css/nc/shared.css" />
       <link rel="stylesheet" href="/css/nc/text.css" />
       <link rel="stylesheet" href="/css/nc/media.css" />
+      <link rel="stylesheet" href="/css/nc/textMedia.css" />
       <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     {% endblock %}
