[templates/nc] Sort of get media working

--- a/templates/narrowcasting/slides/media.twig
+++ b/templates/narrowcasting/slides/media.twig
@@ -1,14 +1,8 @@
-{{ slide.media }}
-
-<br />
-<br />
-<br />
 {% for item in slide.media.all() %}
-    {{ item.kind }}
-    {% if item.kind == "image" %}
-        <img src="{{ item.url }}" alt="{{ item.title }}" />
-    {% endif %}
-    {% if item.kind == "video" %}
-        <video src="{{ item.url }}"></video>
-    {% endif %}
+	{% if item.kind == "image" %}
+		<div class="media" style="height: 100%; background-image: url({{ item.url }});"></div>
+	{% endif %}
+	{% if item.kind == "video" %}
+		<video src="{{ item.url }}"></video>
+	{% endif %}
 {% endfor %}
