[gql] Enable builtin GraphQL schema

--- a/plugins/narrowcasting/src/templates/narrowcasts/_index.twig
+++ b/plugins/narrowcasting/src/templates/narrowcasts/_index.twig
@@ -4,7 +4,7 @@
 {% set canHaveDrafts = true %}
 
 {% block actionButton %}
-  {% if currentUser.can('registerUsers') %}
+  {% if currentUser.can('createCasts') %}
     <a class="btn submit add icon" href="{{ url('narrowcasting/new') }}">{{ "New narrowcast"|t('app') }}</a>
   {% endif %}
 {% endblock %}
